# grocery-scrapers

./: pyproject.toml
prisma-scraper/: prisma_scraper.py
s-kanava-scraper/: s-kanava-scraper.py
voila-scraper/: voila_scraper.py  voila_scraper_sf.py
walmart-scraper/: walmart_scraper.py
